Bug 356336 - kontact crash at start
Summary: kontact crash at start
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-12-06 13:33 UTC by Johann-Nikolaus Andreae
Modified: 2015-12-07 06:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johann-Nikolaus Andreae 2015-12-06 13:33:41 UTC
Application: kontact (5.0.3)

Qt Version: 5.5.1
Operating System: Linux 4.3.0-2-default x86_64
Distribution: "openSUSE Tumbleweed (20151201) (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
start kontact. Works before. could be the last update. I see short we windows with a error message.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f68b69bd940 (LWP 10383))]

Thread 8 (Thread 0x7f6896451700 (LWP 10384)):
#0  0x00007f68b341d20d in poll () from /lib64/libc.so.6
#1  0x00007f68ac865432 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007f68ac867007 in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007f6898179e29 in QXcbEventReader::run (this=0x20fc240) at qxcbconnection.cpp:1229
#4  0x00007f68b3d2594f in QThreadPrivate::start (arg=0x20fc240) at thread/qthread_unix.cpp:331
#5  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#6  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7f688ffff700 (LWP 10385)):
#0  0x00007f68acfcc07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f68b20d83bb in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007f68b20d83f9 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7f684b4e1700 (LWP 10386)):
#0  0x00007f68b341d20d in poll () from /lib64/libc.so.6
#1  0x00007f68ac141264 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f68ac14136c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f68b3f4a52b in QEventDispatcherGlib::processEvents (this=0x7f68440008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#4  0x00007f68b3ef463a in QEventLoop::exec (this=this@entry=0x7f684b4e0c90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f68b3d20b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f68b3d2594f in QThreadPrivate::start (arg=0x2268ac0) at thread/qthread_unix.cpp:331
#7  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#8  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7f68494b1700 (LWP 10387)):
#0  0x00007f68acfcc07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f68b1de6764 in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007f68b2107441 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f6848c91700 (LWP 10388)):
#0  0x00007f68acfcc07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f68b1de7793 in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007f68b2107441 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f6843fff700 (LWP 10389)):
#0  0x00007f68acfcc07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f68b1de7793 in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007f68b2107441 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f68437fe700 (LWP 10390)):
#0  0x00007f68acfcc07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f68b1de7793 in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007f68b2107441 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007f68acfc64a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f68b3425b9d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f68b69bd940 (LWP 10383)):
[KCrash Handler]
#6  ref<int> (_q_value=@0x3000338000001f: <error reading variable>) at ../../src/corelib/arch/qatomic_x86.h:181
#7  ref (this=0x3000338000001f) at ../../src/corelib/thread/qbasicatomic.h:129
#8  operator= (o=..., this=0x7ffe37192fc8) at ../../src/corelib/tools/qshareddata.h:176
#9  QPixmap::QPixmap (this=0x7ffe37192fb0, pixmap=...) at image/qpixmap.cpp:223
#10 0x00007f68af4fbb78 in KPixmapSequence::frameAt (this=this@entry=0x2743360, index=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.16.0/src/kpixmapsequence.cpp:128
#11 0x00007f68a904a128 in Akonadi::DelegateAnimator::sequenceFrame (this=0x2743340, index=...) at /usr/src/debug/kdepimlibs-15.08.3/akonadi/src/widgets/progressspinnerdelegate.cpp:90
#12 0x00007f68a9032448 in Akonadi::CollectionStatisticsDelegate::initStyleOption (this=<optimized out>, option=0x7ffe37193020, index=...) at /usr/src/debug/kdepimlibs-15.08.3/akonadi/src/widgets/collectionstatisticsdelegate.cpp:174
#13 0x00007f68b4ea4879 in QStyledItemDelegate::paint (this=this@entry=0x25dd0a0, painter=painter@entry=0x7ffe371939c0, option=..., index=...) at itemviews/qstyleditemdelegate.cpp:409
#14 0x00007f68a903258b in Akonadi::CollectionStatisticsDelegate::paint (this=0x25dd0a0, painter=0x7ffe371939c0, option=..., index=...) at /usr/src/debug/kdepimlibs-15.08.3/akonadi/src/widgets/collectionstatisticsdelegate.cpp:207
#15 0x00007f68b4e5a4f4 in QTreeView::drawRow (this=0x27145f0, painter=0x7ffe371939c0, option=..., index=...) at itemviews/qtreeview.cpp:1768
#16 0x00007f68b4e5e2e7 in QTreeView::drawTree (this=this@entry=0x27145f0, painter=painter@entry=0x7ffe371939c0, region=...) at itemviews/qtreeview.cpp:1503
#17 0x00007f68b4e643f3 in QTreeView::paintEvent (this=0x27145f0, event=0x7ffe37193f40) at itemviews/qtreeview.cpp:1327
#18 0x00007f68b4c1adf8 in QWidget::event (this=this@entry=0x27145f0, event=event@entry=0x7ffe37193f40) at kernel/qwidget.cpp:9047
#19 0x00007f68b4d12a2e in QFrame::event (this=0x27145f0, e=0x7ffe37193f40) at widgets/qframe.cpp:540
#20 0x00007f68b4e28a24 in QAbstractItemView::viewportEvent (this=this@entry=0x27145f0, event=event@entry=0x7ffe37193f40) at itemviews/qabstractitemview.cpp:1685
#21 0x00007f68b4e653ec in QTreeView::viewportEvent (this=0x27145f0, event=0x7ffe37193f40) at itemviews/qtreeview.cpp:1309
#22 0x00007f68b3ef6b25 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=this@entry=0x20e0f20, receiver=receiver@entry=0x2704570, event=event@entry=0x7ffe37193f40) at kernel/qcoreapplication.cpp:1072
#23 0x00007f68b4bda8ac in QApplicationPrivate::notify_helper (this=this@entry=0x20e0f20, receiver=receiver@entry=0x2704570, e=e@entry=0x7ffe37193f40) at kernel/qapplication.cpp:3712
#24 0x00007f68b4bdf9d6 in QApplication::notify (this=0x7ffe37194ca0, receiver=0x2704570, e=0x7ffe37193f40) at kernel/qapplication.cpp:3499
#25 0x00007f68b3ef6cf3 in QCoreApplication::notifyInternal (this=0x7ffe37194ca0, receiver=receiver@entry=0x2704570, event=event@entry=0x7ffe37193f40) at kernel/qcoreapplication.cpp:965
#26 0x00007f68b4c141b9 in sendSpontaneousEvent (event=0x7ffe37193f40, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:227
#27 QWidgetPrivate::sendPaintEvent (this=this@entry=0x27327a0, toBePainted=...) at kernel/qwidget.cpp:5630
#28 0x00007f68b4c147c9 in QWidgetPrivate::drawWidget (this=this@entry=0x27327a0, pdev=0x2be72a0, rgn=..., offset=..., flags=36, sharedPainter=sharedPainter@entry=0x0, backingStore=0x23c0960) at kernel/qwidget.cpp:5570
#29 0x00007f68b4be7b46 in QWidgetBackingStore::doSync (this=this@entry=0x23c0960) at kernel/qwidgetbackingstore.cpp:1220
#30 0x00007f68b4be7d54 in QWidgetBackingStore::sync (this=0x23c0960) at kernel/qwidgetbackingstore.cpp:1032
#31 0x00007f68b4c04e1f in QWidgetPrivate::syncBackingStore (this=0x217bbb0) at kernel/qwidget.cpp:1907
#32 0x00007f68b4c1aea8 in QWidget::event (this=this@entry=0x2178d70, event=event@entry=0x280ccc0) at kernel/qwidget.cpp:8986
#33 0x00007f68b4d2892b in QMainWindow::event (this=this@entry=0x2178d70, event=event@entry=0x280ccc0) at widgets/qmainwindow.cpp:1495
#34 0x00007f68b5f2e557 in KMainWindow::event (this=this@entry=0x2178d70, ev=ev@entry=0x280ccc0) at /usr/src/debug/kxmlgui-5.16.0/src/kmainwindow.cpp:834
#35 0x00007f68b5f64655 in KXmlGuiWindow::event (this=0x2178d70, ev=0x280ccc0) at /usr/src/debug/kxmlgui-5.16.0/src/kxmlguiwindow.cpp:118
#36 0x00007f68b4bda8cc in QApplicationPrivate::notify_helper (this=this@entry=0x20e0f20, receiver=receiver@entry=0x2178d70, e=e@entry=0x280ccc0) at kernel/qapplication.cpp:3716
#37 0x00007f68b4bdf9d6 in QApplication::notify (this=0x7ffe37194ca0, receiver=0x2178d70, e=0x280ccc0) at kernel/qapplication.cpp:3499
#38 0x00007f68b3ef6cf3 in QCoreApplication::notifyInternal (this=0x7ffe37194ca0, receiver=0x2178d70, event=event@entry=0x280ccc0) at kernel/qcoreapplication.cpp:965
#39 0x00007f68b3ef9016 in sendEvent (event=0x280ccc0, receiver=<optimized out>) at kernel/qcoreapplication.h:224
#40 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x20dbfc0) at kernel/qcoreapplication.cpp:1593
#41 0x00007f68b3ef94f8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1451
#42 0x00007f68b3f4a103 in postEventSourceDispatch (s=0x211fd30) at kernel/qeventdispatcher_glib.cpp:271
#43 0x00007f68ac141097 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#44 0x00007f68ac1412c8 in ?? () from /usr/lib64/libglib-2.0.so.0
#45 0x00007f68ac14136c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#46 0x00007f68b3f4a50f in QEventDispatcherGlib::processEvents (this=0x2138cb0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#47 0x00007f68b3ef463a in QEventLoop::exec (this=this@entry=0x7ffe37194a20, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#48 0x00007f68b3efc2fd in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1229
#49 0x00007f68b443253c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1527
#50 0x00007f68b4bd6f75 in QApplication::exec () at kernel/qapplication.cpp:2976
#51 0x0000000000404f22 in main (argc=1, argv=0x7ffe37194de8) at /usr/src/debug/kdepim-15.08.3/kontact/src/main.cpp:220

Reported using DrKonqi
Comment 1 Laurent Montel 2015-12-07 06:35:40 UTC
Git commit def6b29ce788b9d09e2abb2df283c83b228f3142 by Montel Laurent.
Committed on 07/12/2015 at 06:35.
Pushed by mlaurent into branch 'master'.

FIX Bug 356336 - kontact crash at start

Fix crash when progress icon is not found.

FIXED-IN: 5.18

M  +1    -1    src/kpixmapsequence.cpp

http://commits.kde.org/kwidgetsaddons/def6b29ce788b9d09e2abb2df283c83b228f3142
Comment 2 Laurent Montel 2015-12-07 06:38:11 UTC
Hi 
I fixed crash
but it's because "process-working.png" is not installed in system from oxygen theme.
Make sure that it's installed on your pc

Regards