FIX Bug 356336 - kontact crash at start

Fix crash when progress icon is not found.

FIXED-IN: 5.18
BUG: 356336